--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ ffmpeg-python = "^0.2.0"
 luigi = "^3.5.0"
 loguru = "^0.7.2"
 schedule = "^1.2.2"
+setuptools = "^75.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
