--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   app:
     build: .
+    user: 1000:1000
     volumes:
       - ./input:/app/input
       - ./output:/app/output
